--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "crimson",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -25,7 +25,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.3.0"
   },
   "resolutions": {
     "@types/react": "^17"
