--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i -g yarn
+    - run: cd src/mobile
     - run: yarn install
     - run: yarn run lint
     - run: yarn run build:android --if-present
