--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i -g yarn
+    - run: ls
     - run: cd src/mobile
+    - run: ls
     - run: yarn install
+    - run: ls
     - run: yarn run lint
     - run: yarn run build:android --if-present
     - run: yarn test
